docs/api/qiskit/1.0/qiskit.circuit.library.QFT.mdx
---
title: QFT (v1.0)
description: API reference for qiskit.circuit.library.QFT in qiskit v1.0
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.QFT
---

# QFT

<Class id="qiskit.circuit.library.QFT" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/library/basis_change/qft.py#L24-L295" signature="qiskit.circuit.library.QFT(num_qubits=None, approximation_degree=0, do_swaps=True, inverse=False, insert_barriers=False, name=None)" modifiers="class">
  Bases: `BlueprintCircuit`

  Quantum Fourier Transform Circuit.

  The Quantum Fourier Transform (QFT) on $n$ qubits is the operation

$$
|j\rangle \mapsto \frac{1}{2^{n/2}} \sum_{k=0}^{2^n - 1} e^{2\pi ijk / 2^n} |k\rangle
$$

  The circuit that implements this transformation can be implemented using Hadamard gates on each qubit, a series of controlled-U1 (or Z, depending on the phase) gates and a layer of Swap gates. The layer of Swap gates can in principle be dropped if the QFT appears at the end of the circuit, since then the re-ordering can be done classically. They can be turned off using the `do_swaps` attribute.

  For 4 qubits, the circuit that implements this transformation is:

  ![../\_images/qiskit-circuit-library-QFT-1.png](/docs/images/api/qiskit/1.0/qiskit-circuit-library-QFT-1.avif)

  The inverse QFT can be obtained by calling the `inverse` method on this class. The respective circuit diagram is:

  ![../\_images/qiskit-circuit-library-QFT-2.png](/docs/images/api/qiskit/1.0/qiskit-circuit-library-QFT-2.avif)

  One method to reduce circuit depth is to implement the QFT approximately by ignoring controlled-phase rotations where the angle is beneath a threshold. This is discussed in more detail in [https://arxiv.org/abs/quant-ph/9601018](https://arxiv.org/abs/quant-ph/9601018) or [https://arxiv.org/abs/quant-ph/0403071](https://arxiv.org/abs/quant-ph/0403071).

  Here, this can be adjusted using the `approximation_degree` attribute: the smallest `approximation_degree` rotation angles are dropped from the QFT. For instance, a QFT on 5 qubits with approximation degree 2 yields (the barriers are dropped in this example):

  ![../\_images/qiskit-circuit-library-QFT-3.png](/docs/images/api/qiskit/1.0/qiskit-circuit-library-QFT-3.avif)

  Construct a new QFT circuit.

  **Parameters**

  *   **num\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)") *| None*) – The number of qubits on which the QFT acts.
  *   **approximation\_degree** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")) – The degree of approximation (0 for no approximation).
  *   **do\_swaps** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – Whether to include the final swaps in the QFT.
  *   **inverse** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – If True, the inverse Fourier transform is constructed.
  *   **insert\_barriers** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – If True, barriers are inserted as visualization improvement.
  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)") *| None*) – The name of the circuit.

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.QFT.ancillas">
    Returns a list of ancilla bits in the order that the registers were added.
  </Attribute>

  ### approximation\_degree

  <Attribute id="qiskit.circuit.library.QFT.approximation_degree">
    The approximation degree of the QFT.

    **Returns**

    The currently set approximation degree.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.QFT.calibrations">
    Return calibration dictionary.

    The custom pulse definition of a given gate is of the form `{'gate_name': {(qubits, params): schedule}}`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.QFT.clbits">
    Returns a list of classical bits in the order that the registers were added.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.QFT.data" />

  ### do\_swaps

  <Attribute id="qiskit.circuit.library.QFT.do_swaps">
    Whether the final swaps of the QFT are applied or not.

    **Returns**

    True, if the final swaps are applied, False if not.
  </Attribute>

  ### global\_phase

  <Attribute id="qiskit.circuit.library.QFT.global_phase">
    Return the global phase of the current circuit scope in radians.
  </Attribute>

  ### insert\_barriers

  <Attribute id="qiskit.circuit.library.QFT.insert_barriers">
    Whether barriers are inserted for better visualization or not.

    **Returns**

    True, if barriers are inserted, False if not.
  </Attribute>

  ### instances

  <Attribute id="qiskit.circuit.library.QFT.instances" attributeValue="164" />

  ### layout

  <Attribute id="qiskit.circuit.library.QFT.layout">
    Return any associated layout information about the circuit

    This attribute contains an optional [`TranspileLayout`](qiskit.transpiler.TranspileLayout "qiskit.transpiler.TranspileLayout") object. This is typically set on the output from [`transpile()`](compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") or [`PassManager.run()`](qiskit.transpiler.PassManager#run "qiskit.transpiler.PassManager.run") to retain information about the permutations caused on the input circuit by transpilation.

    There are two types of permutations caused by the [`transpile()`](compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") function, an initial layout which permutes the qubits based on the selected physical qubits on the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target"), and a final layout which is an output permutation caused by [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate")s inserted during routing.
  </Attribute>

  ### metadata

  <Attribute id="qiskit.circuit.library.QFT.metadata">
    The user provided metadata associated with the circuit.

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.QFT.num_ancillas">
    Return the number of ancilla qubits.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.QFT.num_clbits">
    Return number of classical bits.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.QFT.num_parameters" />

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.QFT.num_qubits">
    The number of qubits in the QFT circuit.

    **Returns**

    The number of qubits in the circuit.
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.circuit.library.QFT.op_start_times">
    Return a list of operation start times.

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Returns**

    List of integers representing instruction start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    [**AttributeError**](https://docs.python.org/3/library/exceptions.html#AttributeError "(in Python v3.12)") – When circuit is not scheduled.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.QFT.parameters" />

  ### prefix

  <Attribute id="qiskit.circuit.library.QFT.prefix" attributeValue="'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.QFT.qregs" attributeTypeHint="list[QuantumRegister]">
    A list of the quantum registers associated with the circuit.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.QFT.qubits">
    Returns a list of quantum bits in the order that the registers were added.
  </Attribute>

  ## Methods

  ### inverse

  <Function id="qiskit.circuit.library.QFT.inverse" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/library/basis_change/qft.py#L206-L234" signature="inverse(annotated=False)">
    Invert this circuit.

    **Parameters**

    **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – indicates whether the inverse gate can be implemented as an annotated gate. The value of this argument is ignored as the inverse of a QFT is an IQFT which is just another instance of [`QFT`](#qiskit.circuit.library.QFT "qiskit.circuit.library.QFT").

    **Returns**

    The inverted circuit.

    **Return type**

    [*QFT*](#qiskit.circuit.library.QFT "qiskit.circuit.library.basis_change.qft.QFT")
  </Function>

  ### is\_inverse

  <Function id="qiskit.circuit.library.QFT.is_inverse" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/library/basis_change/qft.py#L198-L204" signature="is_inverse()">
    Whether the inverse Fourier transform is implemented.

    **Returns**

    True, if the inverse Fourier transform is implemented, False otherwise.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")
  </Function>
</Class>

